[gd_scene load_steps=3 format=3 uid="uid://bxvf6q8r4n2hm"]

[ext_resource type="Script" path="res://scripts/TowerDefense.gd" id="1_td_script"]
[ext_resource type="Script" path="res://scripts/TDCamera.gd" id="2_camera_script"]

[node name="TowerDefense" type="Node2D"]
script = ExtResource("1_td_script")

[node name="Map" type="TileMapLayer" parent="."]
tile_set = null

[node name="PathLayer" type="TileMapLayer" parent="Map"]
modulate = Color(0.8, 0.6, 0.4, 1)

[node name="BuildLayer" type="TileMapLayer" parent="Map"]
modulate = Color(0.6, 0.8, 0.6, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)
script = ExtResource("2_camera_script")

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopBar" type="HBoxContainer" parent="UI/GameUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -60.0
offset_right = 400.0
offset_bottom = -10.0

[node name="ResourceDisplay" type="VBoxContainer" parent="UI/GameUI/TopBar"]
layout_mode = 2

[node name="HoneyLabel" type="Label" parent="UI/GameUI/TopBar/ResourceDisplay"]
layout_mode = 2
text = "Honey: 100"

[node name="HealthLabel" type="Label" parent="UI/GameUI/TopBar/ResourceDisplay"]
layout_mode = 2
text = "Health: 20"

[node name="WaveLabel" type="Label" parent="UI/GameUI/TopBar/ResourceDisplay"]
layout_mode = 2
text = "Wave: 1"

[node name="Controls" type="VBoxContainer" parent="UI/GameUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -150.0
offset_right = -10.0
offset_bottom = -10.0

[node name="StartWaveButton" type="Button" parent="UI/GameUI/Controls"]
layout_mode = 2
text = "Start Wave"

[node name="PlaceTowerButton" type="Button" parent="UI/GameUI/Controls"]
layout_mode = 2
text = "Place Tower (T)"

[node name="BackButton" type="Button" parent="UI/GameUI/Controls"]
layout_mode = 2
text = "Back to Menu"